fix overflow bug

--- a/src/animation.css
+++ b/src/animation.css
@@ -2,7 +2,6 @@ body,
 html {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   height: 100%;
 }
 
